--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <groupId>jp.sourceforge.jindolf</groupId>
     <artifactId>jincore</artifactId>
 
-    <version>1.206.113-SNAPSHOT</version>
+    <version>1.207.2</version>
 
     <packaging>jar</packaging>
     <name>JinCore</name>
